jenkins.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jenkins-set
spec:
  replicas: 1
  serviceName: "jenkins"
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins:latest
        ports:
          - name: http-port
            containerPort: 8080
          - name: jnlp-port
            containerPort: 50000
        volumeMounts:
          - name: jenkins-pvc
            mountPath: /var/jenkins_home
  volumeClaimTemplates:
    - metadata:
        name: jenkins-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
        storageClassName: do-block-storage
