jenkins-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    name: rewrite
spec:
  ingressClassName: nginx-example
  rules:
    - host: jenkins.testhub.com
      http:
        paths:
          - pathType: Prefix
            path: "/(.*)"
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
